--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,12 @@
 ---
 extends: "@elastic/kibana"
 
+plugins:
+ - prettier
+
+rules:
+  prettier/prettier: error
+
 settings:
   import/resolver:
     '@elastic/eslint-import-resolver-kibana':
