--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "eslint-plugin-mocha": "^4.9.0",
     "eslint-plugin-no-unsanitized": "^3.0.2",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "^7.0.1",
-    "expect.js": "^0.3.1"
+    "expect.js": "^0.3.1",
+    "prettier": "1.12.1"
   },
   "dependencies": {
     "lodash": "3.10.1",
