--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jest": "^21.22.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-mocha": "^4.9.0",
     "eslint-plugin-no-unsanitized": "^3.0.2",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
